--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>
     Ampaired
     </title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <center>
